--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -1,7 +1,4 @@
-.OverlayBg {
-    background: rgba(57, 55, 72, 0.22);
-    top:80px;
-}
+
 .CartContainer {
     top:80px;
     right:10%;
@@ -11,4 +8,35 @@
     max-height:628px;
     padding:10px;
     width:325px;
+}
+
+.CartModalOverlay {
+  position: fixed;
+  inset: 0;
+  z-index: 50;
+  display: flex;
+  justify-content: flex-end;
+  overflow: hidden;
+  background: rgba(57, 55, 72, 0.22);
+  top:80px;
+}
+
+.CartModalContainer {
+  width:325px;
+  max-height:628px;
+  background-color: red;
+  overflow-y: auto;
+  position:absolute;
+  right: 100px;
+}
+
+.CartPanel {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.CartContent {
+  flex: 1;
+  overflow-y: auto;
 }
