--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -9,43 +9,10 @@
     padding:10px;
     width:325px;
 }
-
-.CartModalOverlay {
-  position: fixed;
-  inset: 0;
-  z-index: 50;
-  display: flex;
-  justify-content: flex-end;
-  overflow: hidden;
-  
+.MainCont {
+    position:fixed;
+    top:80px;
 }
-.BGOverlay {
-  background: rgba(57, 55, 72, 0.22);
-  position: fixed;
-  inset: 0;
-  z-index: 50;
-  display: flex;
-  justify-content: flex-end;
-  overflow: hidden;
-  top:80px;
-}
-
-.CartModalContainer {
-  width:325px;
-  max-height:628px;
-  background-color: red;
-  overflow-y: auto;
-  position:absolute;
-  right: 100px;
-}
-
-.CartPanel {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.CartContent {
-  flex: 1;
-  overflow-y: auto;
+.OverlayBg {
+    background: rgba(57, 55, 72, 0.22);
 }
